--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 Order Allow,Deny
-<FilesMatch "(^index.php$|^$)">
+<FilesMatch "(^index.php$|^$|^style.css$)">
   Allow from all
 </FilesMatch>
 Deny from all
